# Word2VecInC-

./: README.md
w2vec/: CMakeLists.txt  FileReader.c  FileReader.h  Tolkien.h  Tolkienizer.c  Voorhees.c  Voorhees.h  main.c  prueba.c  prueba2.c  w2vec.vcxproj  w2vec.vcxproj.filters
w2vec/w2vec/Debug/: vc143.idb
w2vec/w2vec/Debug/w2vec.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  w2vec.lastbuildstate
w2vec/x64/Debug/: vc143.idb  w2vec.exe.recipe  w2vec.ilk
w2vec/x64/Debug/w2vec.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  w2vec.lastbuildstate
